# Scheduler

./: .gitignore  MongoDB_files_README.txt  README.md  Start.py  a1trial.ino  arduino_ports_init.py  class_prototypes.py  global_adder.py  joy_control.py  joy_control_revised.py  joy_example.py  joy_example_stripped.py  joy_to_serial.py  joystick.py  joystick_demo.py  main.py  math.py  minutes.pages  phoneparse.py  pulltest.txt  sample_material.py  scheduler.py  scheduler_class_prototypes.py  scheduler_start.py  scheduler_start_arm.py  scheduler_start_tutorial.py  scheduler_tests.py  scheduler_types.py  shell.py  shell_class_prototypes.py  shell_start.py  shell_start_arm.py  shell_start_demo.py  shelltypes.py  taskpriority.py  testaroo.py  vsimagetest.py  workAdder.py  workerthreadmanager.py
Aruco/: arucoDetect.py  arucoGen.py
Camera/: .gitignore  VideoFeed.py  readme.md  requirements.txt
Important code/: imagestitching3.0.py  stitching images v1.py
Networking/: A.py  B.py  C1.py  JoyPackeger.py  S1.py  SingletonClient.py  SingletonExample.py  SingletonServer.py  ThreadExample.py  UDPClient.py  client.py  portOccupy.py  port_Cient.py  port_Server.py  server.py  trial.py  trials.py
Smartphone/: HIMU-filetest.csv  HIMUServer.py  README.md  extractSensorData.py  insert_file_name.py  phone_client.py  sensordata.py  setup.py
Smartphone/HIMUServer/: HIMUServer.py
eric-VisualSoftware/: arucoDetect.py  arucoGen.py
sensor_database/: clear_mydatabase_customers.py  tutorial_test.py
text_camera/: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
(+3 files in other folders)
